force-app/main/default/objects/LongTermInventory__c/LongTermInventory__c.object-meta.xml
<CustomObject>
    <label>长龄库存</label>
    <nameField>
        <displayFormat>LTI-{000000}</displayFormat>
        <label>长龄库存编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>