force-app/main/default/objects/LongTermInventory__c/fields/ChanelPartner__c.field-meta.xml
<CustomField>
    <fullName>ChanelPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>经销商</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>长龄库存</relationshipLabel>
    <relationshipName>InventoryYekP</relationshipName>
    <type>Lookup</type>
</CustomField>