force-app/main/default/objects/LongTermInventory__c/fields/InventoryQty__c.field-meta.xml
<CustomField>
    <fullName>InventoryQty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>库存台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>