force-app/main/default/objects/LongTermInventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>机型</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>长龄库存</relationshipLabel>
    <relationshipName>Inventory3XUv</relationshipName>
    <type>Lookup</type>
</CustomField>