force-app/main/default/objects/LongTermInventory__c/fields/SONo__c.field-meta.xml
<CustomField>
    <fullName>SONo__c</fullName>
    <label>SO号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>