force-app/main/default/objects/LongTermInventory__c/fields/StockAge__c.field-meta.xml
<CustomField>
    <fullName>StockAge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>库龄</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>